--- a/mandelbulber2/formula/ui/mandelbulb_pupuku.ui
+++ b/mandelbulber2/formula/ui/mandelbulb_pupuku.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>790</width>
-    <height>1398</height>
+    <height>1423</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -671,11 +671,11 @@
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_18" stretch="0,0">
+    <layout class="QHBoxLayout" name="horizontalLayout_18" stretch="0,1">
      <item>
       <widget class="MyCheckBox" name="checkBox_transf_function_enabledBz_false">
        <property name="text">
-        <string notr="true">BZ</string>
+        <string notr="true">z.y min offset:</string>
        </property>
       </widget>
      </item>
@@ -828,13 +828,6 @@ offset:</string>
       </widget>
      </item>
     </layout>
-   </item>
-   <item>
-    <widget class="MyCheckBox" name="checkBox_transf_function_enabledJ_false">
-     <property name="text">
-      <string notr="true">j</string>
-     </property>
-    </widget>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_27" stretch="0,1,0,1">
